--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -386,8 +386,8 @@ title: Math, Sonification, Plots
     </p></div>
     <br>
     <div><p>
-        The results from this project will advance research for developing better technologies that improve 
-        accessibility and user experience for the visually impaired. This project will culminate with a 
+        The results from this project will advance research for developing better interfaces that improve 
+        accessibility and user experience for visually impaired audiences. This project will culminate with a 
         <a href="../docs/ASSIGNMENT_M2-rbobkoskie3.pdf"
         target="_blank">paper</a>
         commensurable for publication.
