--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -389,7 +389,7 @@ title: Math, Sonification, Plots
         The results from this project will advance research for developing better interfaces that improve 
         accessibility and user experience for visually impaired audiences. This project will culminate with a 
         <a href="../docs/ASSIGNMENT_M2-rbobkoskie3.pdf"
-        target="_blank"<title>CS 6750: Human-Computer Interaction</title>>paper</a>
+        target="_blank">paper<title>CS 6750: Human-Computer Interaction</title></a>
         commensurable for publication.
     </p></div>
     <br>
