--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -388,8 +388,8 @@ title: Math, Sonification, Plots
     <div><p>
         The results from this project will advance research for developing better interfaces that improve 
         accessibility and user experience for visually impaired audiences. This project will culminate with a 
-        <a href="../docs/ASSIGNMENT_M2-rbobkoskie3.pdf"
-        target="_blank">paper<title>CS 6750: Human-Computer Interaction</title></a>
+        <a href="../docs/ASSIGNMENT_M2-rbobkoskie3.pdf" title="A Better User Interface for the Visually Impaired"
+        target="_blank">paper</a>
         commensurable for publication.
     </p></div>
     <br>
