--- a/cs6238/index.html
+++ b/cs6238/index.html
@@ -19,10 +19,10 @@ title: Secure Computer Systems
     <br>
 	<h1>SCS Papers</h1>
 		<nav><ul>
-			<li><a href="docs/Client_Server_Security.pdf" target="_self">A discussion on Client Server Security</a></li>
-			<li><a href="docs/2-Factor_Auth.pdf" target="_self">2-Factor Authentication</a></li>
-			<li><a href="docs/Exploring_SetUID.pdf" target="_self">Exploring SetUID</a></li>
-			<li><a href="docs/Memory_Protection.pdf" target="_self">Memory Protection</a></li>
+			<li><a href="docs/Client_Server_Security.pdf" title="A discussion on Client Server Security" target="_self">A discussion on Client Server Security</a></li>
+			<li><a href="docs/2-Factor_Auth.pdf" title="Factor Authentication" target="_self">2-Factor Authentication</a></li>
+			<li><a href="docs/Exploring_SetUID.pdf" title="Exploring SetUID" target="_self">Exploring SetUID</a></li>
+			<li><a href="docs/Memory_Protection.pdf" title="Memory Protectio" target="_self">Memory Protection</a></li>
 		</ul></nav>
 		<br><br><br>
 
