--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -22,12 +22,12 @@ title: Machine Learning
     <br>
 	<h1>ML Papers</h1>
 		<nav><ul>
-			<li><a href="docs/Demo_ML_SL_DT.pdf" target="_self">Presentation Decision Tree</a></li>
-			<li><a href="docs/rbobkoskie3-analysisP1.pdf" target="_self">Supervised Learning</a></li>
-			<li><a href="docs/rbobkoskie3-analysisP2.pdf" target="_self">Randomized Optimization</a></li>
-			<li><a href="docs/rbobkoskie3-analysisP3.pdf" target="_self">Unsupervised Learning and Dimensionality Reduction</a></li>
-			<li><a href="docs/rbobkoskie3-analysisP4.pdf" target="_self">Markov Decision Processes</a></li>
-			<li><a href="docs/Project3_Reflection-rbobkoskie3.pdf" target="_self">Artificial Intelligence through Computer Vision</a></li>
+			<li><a href="docs/Demo_ML_SL_DT.pdf" title="Decision Tree Tutorial" target="_self">Decision Tree Tutorial</a></li>
+			<li><a href="docs/rbobkoskie3-analysisP1.pdf" title="Supervised Learning" target="_self">Supervised Learning</a></li>
+			<li><a href="docs/rbobkoskie3-analysisP2.pdf" title="Randomized Optimization" target="_self">Randomized Optimization</a></li>
+			<li><a href="docs/rbobkoskie3-analysisP3.pdf" title="Unsupervised Learning and Dimensionality Reduction" target="_self">Unsupervised Learning and Dimensionality Reduction</a></li>
+			<li><a href="docs/rbobkoskie3-analysisP4.pdf" title="Markov Decision Processes" target="_self">Markov Decision Processes</a></li>
+			<li><a href="docs/Project3_Reflection-rbobkoskie3.pdf" title="Artificial Intelligence through Computer Vision" target="_self">Artificial Intelligence through Computer Vision</a></li>
 		</ul></nav>
 		<br><br><br>
 
