--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -27,6 +27,13 @@ title: Machine Learning
 			<li><a href="docs/rbobkoskie3-analysisP2.pdf" title="Randomized Optimization" target="_self">Randomized Optimization</a></li>
 			<li><a href="docs/rbobkoskie3-analysisP3.pdf" title="Unsupervised Learning and Dimensionality Reduction" target="_self">Unsupervised Learning and Dimensionality Reduction</a></li>
 			<li><a href="docs/rbobkoskie3-analysisP4.pdf" title="Markov Decision Processes" target="_self">Markov Decision Processes</a></li>
+			
+			<li><a href="docs/report_Technical_Indicators_Data_Analysis.pdf" title="Technical Indicators Data Analysis" target="_self">Technical Indicators Data Analysis</a></li>
+			<li><a href="docs/report_ML_Martingales.pdf" title="Machine Learning Martingales" target="_self">Machine Learning Martingales</a></li>
+			<li><a href="docs/report_Optimization.pdf" title="Machine Learning Optimization Techniques" target="_self">Machine Learning Optimization Techniques</a></li>
+			<li><a href="docs/report_Assess_Learners.pdf" title="achine Learning Assess Learners" target="_self">Machine Learning Assess Learners</a></li>
+			<li><a href="docs/report_Strategy_Learner.pdf" title="Predicting Stock Pricing with Strategy Learners" target="_self">Predicting Stock Pricing with Strategy Learners</a></li>
+						
 			<li><a href="docs/Project3_Reflection-rbobkoskie3.pdf" title="Artificial Intelligence through Computer Vision" target="_self">Artificial Intelligence through Computer Vision</a></li>
 		</ul></nav>
 		<br><br><br>
