--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -31,7 +31,7 @@ title: Machine Learning
 			<li><a href="docs/report_Technical_Indicators_Data_Analysis.pdf" title="Technical Indicators Data Analysis" target="_self">Technical Indicators Data Analysis</a></li>
 			<li><a href="docs/report_ML_Martingales.pdf" title="Machine Learning Martingales" target="_self">Machine Learning Martingales</a></li>
 			<li><a href="docs/report_Optimization.pdf" title="Machine Learning Optimization Techniques" target="_self">Machine Learning Optimization Techniques</a></li>
-			<li><a href="docs/report_Assess_Learners.pdf" title="achine Learning Assess Learners" target="_self">Machine Learning Assess Learners</a></li>
+			<li><a href="docs/report_Assess_Learners.pdf" title="Machine Learning Assess Learners" target="_self">Machine Learning Assess Learners</a></li>
 			<li><a href="docs/report_Strategy_Learner.pdf" title="Predicting Stock Pricing with Strategy Learners" target="_self">Predicting Stock Pricing with Strategy Learners</a></li>
 						
 			<li><a href="docs/Project3_Reflection-rbobkoskie3.pdf" title="Artificial Intelligence through Computer Vision" target="_self">Artificial Intelligence through Computer Vision</a></li>
