--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -179,6 +179,7 @@ title: Math, Sonification, Plots
 				// margin-bottom: 100px;
 				margin-right: 50%;
 				margin-left: 2%;
+				margin-bottom: 25%;
 				overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
