--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -166,7 +166,9 @@ title: Math, Sonification, Plots
             padding: 10px 10px 10px 10px;
             border: 3px solid #73AD21;
         }
-
+		[draggable=true] {
+			cursor: move;
+		}
         #myAnimation {
                 width: 80px;
                 height: 80px;
