--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -166,10 +166,11 @@ title: Math, Sonification, Plots
             padding: 10px 10px 10px 10px;
             border: 3px solid #73AD21;
         }
-		[draggable=true] {
-			cursor: move;
-		}
+		
         #myAnimation {
+				[draggable=true] {
+					cursor: move;
+				}
                 width: 80px;
                 height: 80px;
                 position: absolute;
@@ -179,9 +180,10 @@ title: Math, Sonification, Plots
 				// margin: auto;
 				// margin-top: 100px;
 				// margin-bottom: 100px;
-				margin-right: 50%;
-				margin-left: 2%;
-				margin-bottom: 25%;
+				// margin-right: 50%;
+				// margin-left: 2%;
+				left: 100px;
+				top: 150px;
 				overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
