--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -168,22 +168,22 @@ title: Math, Sonification, Plots
         }
 		
         #myAnimation {
-				[draggable=true] {
-					cursor: move;
-				}
+				//[draggable=true] {
+				//	cursor: move;
+				//}
                 width: 80px;
                 height: 80px;
-                position: absolute;
-				// position: relative;
+                // position: absolute;
+				position: relative;
 				max-width: 100vh;
 				max-height: 100%;
 				// margin: auto;
-				// margin-top: 100px;
-				// margin-bottom: 100px;
+				margin-top: 10px;
+				margin-bottom: 10px;
 				// margin-right: 50%;
 				// margin-left: 2%;
-				left: 10px;
-				top: 15px;
+				// left: 10px;
+				// top: 15px;
 				overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
