--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -166,24 +166,20 @@ title: Math, Sonification, Plots
             padding: 10px 10px 10px 10px;
             border: 3px solid #73AD21;
         }
-		
+
         #myAnimation {
-				//[draggable=true] {
-				//	cursor: move;
-				//}
                 width: 80px;
                 height: 80px;
-                // position: absolute;
-				position: relative;
+                position: absolute;
+				// position: relative;
 				max-width: 100vh;
 				max-height: 100%;
 				// margin: auto;
-				margin-top: 10px;
-				margin-bottom: 10px;
-				// margin-right: 50%;
-				// margin-left: 2%;
-				// left: 10px;
-				// top: 15px;
+				// margin-top: 100px;
+				// margin-bottom: 100px;
+				margin-right: 50%;
+				margin-left: 2%;
+				margin-bottom: 25px;
 				overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
