--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -168,10 +168,10 @@ title: Math, Sonification, Plots
         }
 
         #myAnimation {
-                width: 180px;
-                height: 180px;
-                position: absolute;
-				// position: relative;
+                width: 80px;
+                height: 80px;
+                // position: absolute;
+				position: relative;
 				max-width: 100vh;
 				max-height: 100%;
 				// margin: auto;
@@ -179,7 +179,7 @@ title: Math, Sonification, Plots
 				// margin-bottom: 100px;
 				margin-right: 50%;
 				margin-left: 2%;
-				margin-bottom: 25px;
+				margin-bottom: 125px;
 				overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
