--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -170,8 +170,10 @@ title: Math, Sonification, Plots
         #myAnimation {
                 width: 80px;
                 height: 80px;
-                // position: absolute;
-				position: relative;
+                position: absolute;
+				top: 10px
+				left: 10px
+				// position: relative;
 				max-width: 100vh;
 				max-height: 100%;
 				// margin: auto;
@@ -179,7 +181,7 @@ title: Math, Sonification, Plots
 				// margin-bottom: 100px;
 				margin-right: 50%;
 				margin-left: 2%;
-				margin-bottom: 125px;
+				margin-bottom: 25px;
 				overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
