--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -171,17 +171,17 @@ title: Math, Sonification, Plots
                 width: 80px;
                 height: 80px;
                 position: absolute;
-				top: 10px
-				left: 10px
+				top: 10px;
+				left: 10px;
 				// position: relative;
 				max-width: 100vh;
 				max-height: 100%;
 				// margin: auto;
 				// margin-top: 100px;
 				// margin-bottom: 100px;
-				margin-right: 50%;
-				margin-left: 2%;
-				margin-bottom: 25px;
+				// margin-right: 50%;
+				// margin-left: 2%;
+				// margin-bottom: 25px;
 				overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
