--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -170,10 +170,10 @@ title: Math, Sonification, Plots
         #myAnimation {
                 width: 80px;
                 height: 80px;
-                position: absolute;
-				top: 100px;
-				left: 15px;
-				// position: relative;
+                position: relative;
+				// position: absolute;
+				top: 200px;
+				left: 20px;
 				max-width: 100vh;
 				max-height: 100%;
 				// margin: auto;
