--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -243,7 +243,8 @@ title: Math, Sonification, Plots
             src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
             title="Click on Image to [ Play > Pause || ] Sonification"
             onclick = "change(); play(playButton);"/>
-        <div id ="myAnimation"></div>
+        <! –– div id ="myAnimation"></div -- >
+		id ="myAnimation"
     </div>
 	<br>
 
