--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -244,7 +244,7 @@ title: Math, Sonification, Plots
             title="Click on Image to [ Play > Pause || ] Sonification"
             onclick = "change(); play(playButton);"/>
         <! –– div id ="myAnimation"></div -- >
-		id ="myAnimation"
+		<img id="myAnimation" class="center fit myContainer">
     </div>
 	<br>
 
