--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -172,8 +172,8 @@ title: Math, Sonification, Plots
                 height: 80px;
                 position: relative;
 				// position: absolute;
-				top: 100px;
-				left: 20px;
+				top: 80%;
+				left: 10%;
 				max-width: 100vh;
 				max-height: 100%;
 				// margin: auto;
