--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -168,20 +168,20 @@ title: Math, Sonification, Plots
         }
 
         #myAnimation {
-                width: 80px;
-                height: 80px;
+                width: 40px;
+                height: 40px;
                 position: relative;
 				// position: absolute;
-				top: 1%;
-				left: 1%;
+				// top: 1%;
+				// left: 1%;
 				max-width: 100vh;
 				max-height: 100%;
 				// margin: auto;
 				// margin-top: 100px;
 				// margin-bottom: 100px;
 				// margin-right: 50%;
-				// margin-left: 2%;
-				// margin-bottom: 25px;
+				margin-left: 2%;
+				margin-bottom: 2%;
 				overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
