--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -170,18 +170,18 @@ title: Math, Sonification, Plots
         #myAnimation {
                 width: 40px;
                 height: 40px;
-                position: relative;
-				// position: absolute;
+                // position: relative;
+				position: absolute;
 				// top: 1%;
 				// left: 1%;
-				max-width: 100vh;
-				max-height: 100%;
+				// max-width: 100vh;
+				// max-height: 100%;
 				// margin: auto;
 				// margin-top: 100px;
 				// margin-bottom: 100px;
 				// margin-right: 50%;
-				margin-left: 2%;
-				margin-bottom: 2%;
+				margin-left: 25%;
+				margin-bottom: 5%;
 				overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
