--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -171,7 +171,8 @@ title: Math, Sonification, Plots
                 width: 40px;
                 height: 40px;
                 // position: relative;
-				position: absolute;
+				// position: absolute;
+				position: sticky;
 				// top: 1%;
 				// left: 1%;
 				// max-width: 100vh;
@@ -181,7 +182,7 @@ title: Math, Sonification, Plots
 				// margin-bottom: 100px;
 				// margin-right: 50%;
 				margin-left: 25%;
-				margin-bottom: 5%;
+				margin-bottom: 8%;
 				overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
