--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -171,8 +171,8 @@ title: Math, Sonification, Plots
                 width: 40px;
                 height: 40px;
                 // position: relative;
-				// position: absolute;
-				position: sticky;
+				position: absolute;
+				// position: sticky;
 				// top: 1%;
 				// left: 1%;
 				// max-width: 100vh;
@@ -181,8 +181,8 @@ title: Math, Sonification, Plots
 				// margin-top: 100px;
 				// margin-bottom: 100px;
 				// margin-right: 50%;
-				margin-left: 25%;
-				margin-bottom: 8%;
+				margin-left: 35%;
+				margin-bottom: 20%;
 				overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
