--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -132,19 +132,7 @@ title: Math, Sonification, Plots
                 display: block;
                 margin: auto;
         }
-
-        .myContainer {
-                width: 100%;
-                height: 100%;
-                // width: 800px;
-                // height: 600px;
-                position: relative;
-				overflow: visible;
-                // background: url('/cs6460/images/ST_Circle.png');
-                // background-color: blue;
-                // background-color: black;
-        }
-
+        
         .floatButton {
             width: 220px;
             height: 100%;
@@ -166,6 +154,19 @@ title: Math, Sonification, Plots
             padding: 10px 10px 10px 10px;
             border: 3px solid #73AD21;
         }
+		
+		.myContainer {
+                width: 100%;
+                height: 100%;
+                // width: 800px;
+                // height: 600px;
+                // position: relative;
+				position: absolute;
+				overflow: visible;
+                // background: url('/cs6460/images/ST_Circle.png');
+                // background-color: blue;
+                // background-color: black;
+        }
 
         #myAnimation {
                 width: 40px;
@@ -181,8 +182,8 @@ title: Math, Sonification, Plots
 				// margin-top: 100px;
 				// margin-bottom: 100px;
 				// margin-right: 50%;
-				margin-left: 35%;
-				margin-bottom: 20%;
+				margin-left: 30%;
+				margin-bottom: 15%;
 				overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
