--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -160,15 +160,15 @@ title: Math, Sonification, Plots
                 height: 100%;
                 // width: 800px;
                 // height: 600px;
-                // position: relative;
-				position: absolute;
+                position: relative;
+				// position: absolute;
 				overflow: visible;
                 // background: url('/cs6460/images/ST_Circle.png');
                 // background-color: blue;
                 // background-color: black;
         }
 
-        #myAnimation {
+        .myAnimation {
                 width: 40px;
                 height: 40px;
                 // position: relative;
