--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -168,7 +168,7 @@ title: Math, Sonification, Plots
                 // background-color: black;
         }
 
-        .myAnimation {
+        #myAnimation {
                 width: 40px;
                 height: 40px;
                 // position: relative;
