--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -182,11 +182,11 @@ title: Math, Sonification, Plots
 				// margin-top: 100px;
 				// margin-bottom: 100px;
 				// margin-right: 50%;
-				margin-left: 30%;
-				margin-bottom: 15%;
+				margin-left: 15%;
+				margin-bottom: 45%;
 				overflow: hidden;
 				// overflow: visible;
-				// object-fit: contain;
+				object-fit: contain;
                 background-color: #555;
                 border-radius: 50%;
 		}
