--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -183,7 +183,7 @@ title: Math, Sonification, Plots
 				// margin-bottom: 100px;
 				// margin-right: 50%;
 				margin-left: 15%;
-				margin-bottom: 45%;
+				margin-top: 45%;
 				overflow: hidden;
 				// overflow: visible;
 				object-fit: contain;
