--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -246,7 +246,7 @@ title: Math, Sonification, Plots
             title="Click on Image to [ Play > Pause || ] Sonification"
             onclick = "change(); play(playButton);"/>
         <! –– div id ="myAnimation"></div -- >
-		<img id="myAnimation" class="center fit myContainer">
+		<img id="myAnimation" class="center fit myContainer"/>
     </div>
 	<br>
 
