--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -168,7 +168,7 @@ title: Math, Sonification, Plots
                 // background-color: black;
         }
 
-        #myAnimation {
+        .myAnimation {
                 width: 40px;
                 height: 40px;
                 // position: relative;
@@ -246,7 +246,8 @@ title: Math, Sonification, Plots
             title="Click on Image to [ Play > Pause || ] Sonification"
             onclick = "change(); play(playButton);"/>
         <! –– div id ="myAnimation"></div -- >
-		<img id="myAnimation" class="center fit myContainer"/>
+		<! –– img id="myAnimation" class="center fit myContainer" -- >
+		<img class="myAnimation" class="center fit myContainer">
     </div>
 	<br>
 
