--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -174,7 +174,7 @@ title: Math, Sonification, Plots
                 // position: relative;
 				position: absolute;
 				// position: sticky;
-				// top: 1%;
+				top: 10%;
 				// left: 1%;
 				// max-width: 100vh;
 				// max-height: 100%;
@@ -183,7 +183,7 @@ title: Math, Sonification, Plots
 				// margin-bottom: 100px;
 				// margin-right: 50%;
 				margin-left: 15%;
-				margin-top: 5%;
+				// margin-top: 5%;
 				overflow: hidden;
 				// overflow: visible;
 				object-fit: contain;
