--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -174,7 +174,8 @@ title: Math, Sonification, Plots
                 // position: relative;
 				position: absolute;
 				// position: sticky;
-				top: 70%;
+				// top: 70%;
+				bottom: 50%;
 				// left: 1%;
 				// max-width: 100vh;
 				// max-height: 100%;
