--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -175,7 +175,7 @@ title: Math, Sonification, Plots
 				position: absolute;
 				// position: sticky;
 				// top: 70%;
-				bottom: 5%;
+				bottom: 5px;
 				// left: 1%;
 				// max-width: 100vh;
 				// max-height: 100%;
