--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -168,7 +168,8 @@ title: Math, Sonification, Plots
                 // background-color: black;
         }
 
-        #myAnimation {
+        // #myAnimation {
+		.myAnimation {
                 width: 40px;
                 height: 40px;
                 // position: relative;
@@ -248,7 +249,8 @@ title: Math, Sonification, Plots
             onclick = "change(); play(playButton);"/>
         <! –– div id ="myAnimation"></div -- >
 		<! –– img class="myAnimation" class="center fit myContainer" -- >
-		<img id="myAnimation" class="center fit myContainer">
+		<! -- img id="myAnimation" class="center fit myContainer" -- >
+		<div class="myAnimation"></div>
 	</div>
 	<br>
 
