--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -250,7 +250,7 @@ title: Math, Sonification, Plots
         <! –– div id ="myAnimation"></div -- >
 		<! –– img class="myAnimation" class="center fit myContainer" -- >
 		<! -- img id="myAnimation" class="center fit myContainer" -- >
-		<div class="myAnimation"></div>
+		<div img class="myAnimation"></div>
 	</div>
 	<br>
 
