--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -168,8 +168,7 @@ title: Math, Sonification, Plots
                 // background-color: black;
         }
 
-        // #myAnimation {
-		.myAnimation {
+        #myAnimation {
                 width: 40px;
                 height: 40px;
                 // position: relative;
@@ -250,7 +249,7 @@ title: Math, Sonification, Plots
         <! –– div id ="myAnimation"></div -- >
 		<! –– img class="myAnimation" class="center fit myContainer" -- >
 		<! -- img id="myAnimation" class="center fit myContainer" -- >
-		<div img class="myAnimation"></div>
+		<div img id="myAnimation"></div>
 	</div>
 	<br>
 
