--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -185,9 +185,9 @@ title: Math, Sonification, Plots
 				// margin-right: 50%;
 				margin-left: 12%;
 				// margin-top: 5%;
-				overflow: hidden;
+				// overflow: hidden;
 				// overflow: visible;
-				object-fit: contain;
+				// object-fit: contain;
                 background-color: #555;
                 border-radius: 50%;
 		}
