--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -175,7 +175,8 @@ title: Math, Sonification, Plots
 				position: absolute;
 				// position: sticky;
 				// top: 70%;
-				top: 1050px;
+				// top: 1050px;
+				
 				// left: 1%;
 				// max-width: 100vh;
 				// max-height: 100%;
@@ -184,7 +185,7 @@ title: Math, Sonification, Plots
 				// margin-bottom: 100px;
 				// margin-right: 50%;
 				margin-left: 12%;
-				// margin-top: 5%;
+				margin-bottom: 5%;
 				// overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
