--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -156,10 +156,10 @@ title: Math, Sonification, Plots
         }
 		
 		.myContainer {
-                width: 100%;
-                height: 100%;
-                // width: 800px;
-                // height: 600px;
+                // width: 100%;
+                // height: 100%;
+                width: 800px;
+                height: 600px;
                 position: relative;
 				// position: absolute;
 				overflow: visible;
