--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -160,9 +160,9 @@ title: Math, Sonification, Plots
                 // height: 100%;
                 width: 800px;
                 height: 600px;
-                position: relative;
-				// position: absolute;
-				overflow: visible;
+                // position: relative;
+				position: absolute;
+				// overflow: visible;
                 // background: url('/cs6460/images/ST_Circle.png');
                 // background-color: blue;
                 // background-color: black;
@@ -245,7 +245,7 @@ title: Math, Sonification, Plots
     <div class="center fit myContainer">
         <img id="myFunction" class="center fit myContainer"
             src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
-            title="Click on Image to [ Play > Pause || ] Sonification"
+            title="Click on Image for Description of Usage"
             onclick = "change(); play(playButton);"/>
         <! –– div id ="myAnimation"></div -- >
 		<! –– img class="myAnimation" class="center fit myContainer" -- >
