--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -171,8 +171,8 @@ title: Math, Sonification, Plots
         #myAnimation {
                 width: 40px;
                 height: 40px;
-                // position: relative;
-				position: absolute;
+                position: relative;
+				// position: absolute;
 				// position: sticky;
 				// top: 70%;
 				// top: 1050px;
