--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -163,6 +163,7 @@ title: Math, Sonification, Plots
                 position: relative;
 				// position: absolute;
 				// overflow: visible;
+				overflow: scroll;
                 // background: url('/cs6460/images/ST_Circle.png');
                 // background-color: blue;
                 // background-color: black;
