--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -163,7 +163,7 @@ title: Math, Sonification, Plots
                 position: relative;
 				// position: absolute;
 				// overflow: visible;
-				overflow: scroll;
+				overflow: hidden;
                 // background: url('/cs6460/images/ST_Circle.png');
                 // background-color: blue;
                 // background-color: black;
@@ -243,15 +243,15 @@ title: Math, Sonification, Plots
     <br>
 
     <!-- img class="center fit" src="\images\ST_3D_Hyperbola.png" title="Graph of a 3-Dimensional Hyperbola w/o High Contrast" -->
-    <div class="center fit myContainer">
-        <img id="myFunction" class="center fit myContainer"
+    <div>
+        <img id="myFunction"
             src="/cs6750/images/MICROWAVE_INTERFACE_PROJECT_HICONTRAST.png"
             title="Click on Image for Description of Usage"
             onclick = "change(); play(playButton);"/>
         <! –– div id ="myAnimation"></div -- >
 		<! –– img class="myAnimation" class="center fit myContainer" -- >
 		<! -- img id="myAnimation" class="center fit myContainer" -- >
-		<div img id="myAnimation"></div>
+		<img id="myAnimation"/>
 	</div>
 	<br>
 
