--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -184,8 +184,8 @@ title: Math, Sonification, Plots
 				// margin-top: 100px;
 				// margin-bottom: 100px;
 				// margin-right: 50%;
-				// margin-left: 5%;
-				margin-bottom: 75%;
+				margin-left: 1%;
+				margin-top: 5%;
 				// overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
