--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -175,7 +175,7 @@ title: Math, Sonification, Plots
                 position: relative;
 				// position: absolute;
 				// position: sticky;
-				// top: 70%;
+				top: 70%;
 				// top: 1050px;
 				// left: 1%;
 				// max-width: 100vh;
@@ -185,7 +185,7 @@ title: Math, Sonification, Plots
 				// margin-bottom: 100px;
 				// margin-right: 50%;
 				margin-left: 1%;
-				margin-top: 75%;
+				// margin-top: 75%;
 				// overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
