--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -175,8 +175,8 @@ title: Math, Sonification, Plots
                 position: relative;
 				// position: absolute;
 				// position: sticky;
-				top: 20%;
-				// top: 1050px;
+				// top: 20%;
+				bottom: 100px;
 				// left: 1%;
 				// max-width: 100vh;
 				// max-height: 100%;
