--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -176,7 +176,7 @@ title: Math, Sonification, Plots
 				// position: absolute;
 				// position: sticky;
 				// top: 20%;
-				bottom: 75px;
+				bottom: 50px;
 				// left: 1%;
 				// max-width: 100vh;
 				// max-height: 100%;
@@ -189,7 +189,8 @@ title: Math, Sonification, Plots
 				// overflow: hidden;
 				// overflow: visible;
 				// object-fit: contain;
-                background-color: #555;
+                // background-color: #555;
+				background-color: black;
                 border-radius: 50%;
 		}
     </style>
