--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -170,8 +170,8 @@ title: Math, Sonification, Plots
         }
 
         #myAnimation {
-                width: 40px;
-                height: 40px;
+                width: 35px;
+                height: 35px;
                 position: relative;
 				// position: absolute;
 				// position: sticky;
@@ -190,7 +190,8 @@ title: Math, Sonification, Plots
 				// overflow: visible;
 				// object-fit: contain;
                 // background-color: #555;
-				background-color: black;
+				// background-color: black;
+				color: black;
                 border-radius: 50%;
 		}
     </style>
