--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -173,24 +173,17 @@ title: Math, Sonification, Plots
                 width: 35px;
                 height: 35px;
                 position: relative;
-				// position: absolute;
-				// position: sticky;
-				// top: 20%;
+				/* position: absolute; */
+				/* position: sticky; */
+				/* top: 20%; */
 				bottom: 50px;
-				// left: 1%;
-				// max-width: 100vh;
-				// max-height: 100%;
-				// margin: auto;
-				// margin-top: 100px;
-				// margin-bottom: 100px;
-				// margin-right: 50%;
+				/* left: 1%; */
 				margin-left: 1%;
-				// margin-top: 75%;
-				// overflow: hidden;
-				// overflow: visible;
-				// object-fit: contain;
-                // background-color: #555;
-				// background-color: black;
+				/* margin-top: 75%; */
+				/* overflow: hidden; */
+				/* object-fit: contain; */
+                /* background-color: #555; */
+				/* background-color: black; */
 				color: black;
                 border-radius: 50%;
 		}
