--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -245,7 +245,7 @@ title: Math, Sonification, Plots
         <! –– div id ="myAnimation"></div -- >
 		<! –– img class="myAnimation" class="center fit myContainer" -- >
 		<! -- img id="myAnimation" class="center fit myContainer" -- >
-		<img id="myAnimation"/>
+		<img id="myAnimation" path style="fill: black"/>
 	</div>
 	<br>
 
