--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -177,8 +177,8 @@ title: Math, Sonification, Plots
 				/* position: sticky; */
 				/* top: 20%; */
 				/* left: 1%; */
-				bottom: 48px;
-				margin-left: 1.5%;
+				bottom: 42px;
+				margin-left: 1.2%;
 				/* margin-top: 75%; */
 				/* overflow: hidden; */
 				/* object-fit: contain; */
@@ -245,7 +245,7 @@ title: Math, Sonification, Plots
         <! –– div id ="myAnimation"></div -- >
 		<! –– img class="myAnimation" class="center fit myContainer" -- >
 		<! -- img id="myAnimation" class="center fit myContainer" -- >
-		<img id="myAnimation" path style="fill: black"/>
+		<img id="myAnimation"/>
 	</div>
 	<br>
 
