--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -138,7 +138,7 @@ title: Math, Sonification, Plots
             height: 100%;
             /* transform: scale(.5, .5); */
             /* display:inline-block; */
-            float:left;
+            float:bottom;
             /* border: 3px solid #73AD21; */
         }
 
@@ -266,6 +266,7 @@ title: Math, Sonification, Plots
 				Note that the native browser on iPhone does not support volume control from the application.
 			</p></div>
 		</div>
+		<div class="floatButton"></div>
 	</div><br>
 
 	<! –– audio id="audio" src="/cs6460/sounds/hyperbola.mp4"></audio -->
