--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -256,7 +256,7 @@ title: Math, Sonification, Plots
 			<! –– img class="myAnimation" class="center fit myContainer" -- >
 			<! -- img id="myAnimation" class="center fit myContainer" -- >
 			<img id="myAnimation"/>
-		</div>
+		</div>><br>
 		<div class="floatWarning">
 			<div><p>
 				!ALERT! Sonification uses sound: frequency, amplitude and timbre to convey 
