--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -160,7 +160,7 @@ title: Math, Sonification, Plots
 		.myContainer {
 				fwidth: 50%;
 				float: left;
-				padding: 20px;
+				/* padding: 20px; */
                 /* width: 100%; */
                 /* height: 100%; */
                 /* width: 800px; */
@@ -177,7 +177,7 @@ title: Math, Sonification, Plots
 		.floatItems {
 				fwidth: 50%;
 				float: left;
-				padding: 20px;
+				padding: 5px;
 		}
 
         #myAnimation {
