--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -256,7 +256,7 @@ title: Math, Sonification, Plots
 			<! –– img class="myAnimation" class="center fit myContainer" -- >
 			<! -- img id="myAnimation" class="center fit myContainer" -- >
 			<img id="myAnimation"/>
-		</div><br><br>
+		</div>
 		<div class="floatWarning">
 			<div><p>
 				!ALERT! Sonification uses sound: frequency, amplitude and timbre to convey 
@@ -268,7 +268,6 @@ title: Math, Sonification, Plots
 		</div>
 		<div class="floatButton">
 			<button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
-			<br>
 			<button class="volDec" onclick="vol_dec()">-</button>
 			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 		</div>
