--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -45,10 +45,10 @@ title: Math, Sonification, Plots
             color: white; /* White text */
             width: 0;
             height: 0;
-            // text-align: left;
             font-size: 18px;
             font-weight: bold;
-            // padding: 0px 5px;
+			/* text-align: left; */
+            /* padding: 0px 5px; */
             margin-right: 8px;
             border-top: 24px solid transparent;
             border-right: 36px solid #000;
@@ -58,10 +58,10 @@ title: Math, Sonification, Plots
         .volInc {
             background-color: #8A2BE2; /* BlueViolet background */
             color: white; /* White text */
-            // display: inline-block
 			width:  0;
             height: 0;
-            // text-align: left;
+			/^ display: inline-block */
+            /* text-align: left; */
             font-size: 18px;
             font-weight: bold;
             border-top: 24px solid transparent;
@@ -72,16 +72,16 @@ title: Math, Sonification, Plots
         .play {
             background-color: #4CAF50; /* Green background */
             color: white; /* White text */
-            // color: #FFFFFF;
+            /* color: #FFFFFF; */
             text-align: left;
             font-size: 18px;
             font-weight: bold;
             padding: 0px 8px;
             margin-right:16px;
-            // background: transparent;
             box-sizing: border-box;
-            // display: inline-block
-			// width: 74px;
+            /* display: inline-block */
+			/* width: 74px; */
+			/* background: transparent; */
             width:  205;
             height: 74px;
 
@@ -136,10 +136,10 @@ title: Math, Sonification, Plots
         .floatButton {
             width: 220px;
             height: 100%;
+			float:bottom;
             /* transform: scale(.5, .5); */
             /* display:inline-block; */
-            float:bottom;
-            /* border: 3px solid #73AD21; */
+			/* border: 3px solid #73AD21; */
         }
 
         .floatWarning {
@@ -147,7 +147,6 @@ title: Math, Sonification, Plots
             /* width: 500px; */
             height: 200px;
             display:inline-block;
-            /* float:left; */
 			width: 50%;
 			float: left;
             /* position:relative; */
