--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -270,8 +270,8 @@ title: Math, Sonification, Plots
 			<button class="volDec" onclick="vol_dec()">-</button>
 			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 		</div>
-		<br style="clear:both" />
-	</div><br>
+		<! -- br style="clear:both" / -- >
+	</div>
 
         <script>
             var playButton = document.getElementById("playButton")
