--- a/cs6750/MICROWAVE_PROTOTYPE/index - Copy (2).html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index - Copy (2).html
@@ -34,44 +34,6 @@ title: Math, Sonification, Plots
                 margin: 4px 2px;
                 cursor: pointer;
         }
-		
-		.button_ckdf button {
-                background-color: #4CAF50; /* Green background */
-                border: 1px solid green; /* Green border */
-                color: white; /* White text */
-                font-weight: bold;
-                padding: 10px 24px; /* Some padding */
-                cursor: pointer; /* Pointer/hand icon */
-                float: left; /* Float the buttons side by side */
-        }
-
-        .button_ck {
-                background-color: #4CAF50; /* Green background */
-                border: 1px solid green; /* Green border */
-                color: white; /* White text */
-                padding: 15px 32px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 18px;
-                font-weight: bold;
-                margin: 4px 2px;
-                cursor: pointer;
-        }
-		
-		.button_df {
-                background-color: #4CAF50; /* Green background */
-                border: 1px solid green; /* Green border */
-                color: white; /* White text */
-                padding: 15px 32px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 18px;
-                font-weight: bold;
-                margin: 4px 2px;
-                cursor: pointer;
-        }
 
         /* Add a background color on hover */
         button:hover {
@@ -304,12 +266,9 @@ title: Math, Sonification, Plots
 			</p></div>
 		</div>
 		<div class="floatButton">
-			<div class="button_ckdf">
-				<button type="button_ck" onclick="setBG_Black()">HIGH CONTRAST</button>
-				<button type="button_df" onclick="setBG_White()">STD  CONTRAST</button>			
-				<! -- button id="playButton" class="play" onclick="play(this)">SONIFICATION</button -- >
-				<! -- button class="volDec" onclick="vol_dec()">-</button -- >
-				<! -- button class="volInc" onclick="vol_inc()">+ VOLUME</button -- >
+			<button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
+			<button class="volDec" onclick="vol_dec()">-</button>
+			<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 		</div>
 		<! -- br style="clear:both" / -- >
 	</div>
