--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -305,11 +305,11 @@ title: Math, Sonification, Plots
 		</div>
 		<div class="floatButton">
 			<div class="button_ckdf">
-				<button type="button_ck" onclick="setBG_Black()"> COOK </button>
+				<button type="button_ck" onclick="setBG_Black()">  COOK </button>
 				<button type="button_df" onclick="setBG_White()">DEFROST</button>			
-				<!-- button id="playButton" class="play" onclick="play(this)" -->SONIFICATION</button -->
-				<!-- button class="volDec" onclick="vol_dec()" -->-</button -->
-				<!-- button class="volInc" onclick="vol_inc()" -->+ VOLUME<!-- /button -->
+				<button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
+				<button class="volDec" onclick="vol_dec()">-</button>
+				<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
 		</div>
 		<! -- br style="clear:both" / -- >
 	</div>
