--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -307,9 +307,11 @@ title: Math, Sonification, Plots
 			<div class="button_ckdf">
 				<button type="button_ck" onclick="setBG_Black()">  COOK </button>
 				<button type="button_df" onclick="setBG_White()">DEFROST</button>			
+				<script>
 				<button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
 				<button class="volDec" onclick="vol_dec()">-</button>
 				<button class="volInc" onclick="vol_inc()">+ VOLUME</button>
+				</script>
 		</div>
 		<! -- br style="clear:both" / -- >
 	</div>
