--- a/cs6750/MICROWAVE_PROTOTYPE/index.html
+++ b/cs6750/MICROWAVE_PROTOTYPE/index.html
@@ -46,9 +46,9 @@ title: Math, Sonification, Plots
         }
 
         .button_ck {
-                background-color: #4CAF50; /* Green background */
-                border: 1px solid green; /* Green border */
-                color: white; /* White text */
+                background-color: red; /* Red background */
+                border: 1px solid black; /* Black border */
+                color: black; /* Black text */
                 padding: 15px 32px;
                 text-align: center;
                 text-decoration: none;
@@ -60,9 +60,9 @@ title: Math, Sonification, Plots
         }
 		
 		.button_df {
-                background-color: #4CAF50; /* Green background */
-                border: 1px solid green; /* Green border */
-                color: white; /* White text */
+                background-color: blue; /* Blue background */
+                border: 1px solid black; /* Black border */
+                color: black; /* Black text */
                 padding: 15px 32px;
                 text-align: center;
                 text-decoration: none;
